Added code functional unit and 'primitive' ROB code 	-fu.c 	-fu.h Modifications 	-config.h 	-init.h 	-Instructions.asm 	-Makefile 	-init.c 	-main.c
-gs

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,5 +2,7 @@ local_dir := src
 loc_obj :=
 
 loc_obj += main.o
+loc_obj += init.o
+loc_obj += fu.o
 
 obj-y += $(addprefix $(local_dir)/,$(loc_obj))
