ROB: Fix Syntax Bugs

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,6 +4,7 @@ loc_obj :=
 loc_obj += main.o
 loc_obj += init.o
 loc_obj += fu.o
-loc_obj += rob.c
+loc_obj += rob.o
+loc_obj += instr.o
 
 obj-y += $(addprefix $(local_dir)/,$(loc_obj))
